--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+
+
 html,body{
   display: grid;
   height: 100%;
@@ -19,7 +21,7 @@ html,body{
 .wrapper{
   overflow: hidden;
   max-width: 390px;
-  background: #fff;
+  background: #fafafa;
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
@@ -49,7 +51,7 @@ html,body{
 .slide-controls .slide{
   height: 100%;
   width: 100%;
-  color: #fff;
+  color: #ffffff;
   font-size: 18px;
   font-weight: 500;
   text-align: center;
